--- a/src/main/resources/config.ini
+++ b/src/main/resources/config.ini
@@ -1,9 +1,7 @@
-#Port that this server will use to listen for packages
-port=8002
-ip=localhost
 
-#Raft clusters, += ip+":"port
-cluster=127.0.0.1/24:8000;127.0.0.1/24:8001
+
+#Raft clusters
+cluster=127.0.0.1:8000;127.0.0.1:8001;127.0.0.1:8002
 
 #Interval of values in milisseconds that this server will randomly choose to timeout when it does not receive leaders heartBeat
 timeOutInterval=100,300
