--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ target/classes/config.ini
 target/classes/META-INF/MANIFEST.MF
 target/classes/META-INF/maven/Raft/Raft/pom.properties
 target/classes/META-INF/maven/Raft/Raft/pom.xml
+target/classes/com/client/Client.class
+target/classes/com/raft/Server.class
+target/classes/META-INF/maven/Raft/Raft/pom.properties
+target/classes/config.ini
+target/classes/META-INF/MANIFEST.MF
+target/classes/META-INF/maven/Raft/Raft/pom.xml
+.classpath
+src/main/resources/state.conf
