--- a/src/main/resources/state.conf
+++ b/src/main/resources/state.conf
@@ -1,2 +1,3 @@
-#Wed Oct 07 17:58:17 WEST 2020
-votedFor=null
+#Wed Oct 07 20:05:08 WEST 2020
+votedFor=Address(ipAddress\=127.0.0.1, port\=1000)
+currentTerm=1
