--- a/src/main/resources/config.ini
+++ b/src/main/resources/config.ini
@@ -8,3 +8,5 @@ cluster=127.0.0.1:1000;127.0.0.1:1001;127.0.0.1:1002;
 #Interval of values in milisseconds that this server will randomly choose to timeout when it does not receive leaders heartBeat or append entries
 timeOutInterval=300,500
 
+#Interval of values in milisseconds that this server will send the heartbeat
+heartbeatTimeOut = 100
