Added Monitor and fixed election

--- a/src/main/resources/Server1000/config.ini
+++ b/src/main/resources/Server1000/config.ini
@@ -6,5 +6,14 @@ ip=127.0.0.1
 cluster=127.0.0.1:1000;127.0.0.1:1001;127.0.0.1:1002;
 
 #Interval of values in milisseconds that this server will randomly choose to timeout when it does not receive leaders heartBeat or append entries
-timeOutInterval=300,500
+timeOutInterval=3000,5000
 
+#Interval of values in milisseconds that this server will send the heartbeat
+heartbeatTimeOut=1000
+
+#Time to wait for a vote response
+timeOutVote=2000
+
+#Monitor server
+monitorIp=127.0.0.1
+monitorPort=1500
