--- a/src/main/resources/Server1001/config.ini
+++ b/src/main/resources/Server1001/config.ini
@@ -6,7 +6,7 @@ ip=127.0.0.1
 cluster=127.0.0.1:1000;127.0.0.1:1001;127.0.0.1:1002;
 
 #Interval of values in milisseconds that this server will randomly choose to timeout when it does not receive leaders heartBeat or append entries
-timeOutInterval=3000,5000
+timeOutInterval=30000000,50000000
 
 #Interval of values in milisseconds that this server will send the heartbeat
 heartbeatTimeOut = 1000
