--- a/src/main/resources/Server1002/config.ini
+++ b/src/main/resources/Server1002/config.ini
@@ -17,3 +17,9 @@ timeOutVote=2000
 #Monitor server
 monitorIp=127.0.0.1
 monitorPort=1500
+
+#Chunk size
+chunckSize=5000
+
+#Entries to snapshot
+entriesToSnapshot=20000
